# tpl-build

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  deploy.bat  deploy.sh
.build/: args_parse.cmd  cmake_build.cmd  cmake_build.sh  cmake_clean.cmd  dispatch.cmake  dotnet_build.cmd  dotnet_build.sh  dotnet_clean.cmd  dotnet_test.cmd  dotnet_test.sh  env_load.cmd  register_templates.cmd  toolchain_msvc.cmd  vs_detect.cmd  zap.cmd  zip.cmake
.env/: clang.env  gcc.env  global.env  linux.env  msvc.env  windows.env
.github/workflows/: cd.yml  ci.yml  release.yml
src/templates/: CMakeLists.txt
src/templates/cpp/: CMakeLists.txt
src/templates/cpp/console/linux/project/: CMakeLists.txt  CppLinuxConsole.csproj  LinuxConsole.vcxproj  LinuxConsole.vcxproj.filters  LinuxConsole.vstemplate  build.sh
src/templates/cpp/console/linux/project/src/: main.cpp
src/templates/cpp/console/project/: CMakeLists.txt  Console.vcxproj  Console.vcxproj.filters  Console.vstemplate  build.bat
src/templates/cpp/console/project/.cmake/: sources.generated.cmake
src/templates/cpp/gui/gtk/project/: CMakeLists.txt  CppLinuxGtk.csproj  Gtk.vcxproj  Gtk.vcxproj.filters  Gtk.vstemplate
src/templates/cpp/gui/gtk/project/.cmake/: sources.generated.cmake  x86.cmake
src/templates/cpp/gui/gtk/project/src/: gtkmain.cpp
src/templates/cpp/gui/qt/project/: CMakeLists.txt  CppLinuxQt.csproj  Qt.vcxproj  Qt.vcxproj.filters  Qt.vstemplate
src/templates/cpp/gui/qt/project/.cmake/: aarch64.cmake  arm.cmake  sources.generated.cmake
src/templates/cpp/gui/qt/project/src/: qtmain.cpp
src/templates/cpp/gui/win32/project/: CMakeLists.txt  CppWin32.csproj  Win32.vcxproj  Win32.vstemplate  build.sh
src/templates/cpp/gui/win32/project/src/: winmain.cpp
src/templates/cpp/module/linux/project/: CMakeLists.txt  CppLinuxModule.csproj  LinuxModule.vcxproj  LinuxModule.vcxproj.filters  LinuxModule.vstemplate
src/templates/cpp/module/linux/project/.cmake/: x64.cmake
src/templates/cpp/module/project/: CMakeLists.txt  CppModule.csproj  Module.vcxproj  Module.vcxproj.filters  Module.vstemplate  build.bat
src/templates/cpp/module/project/.cmake/: sources.generated.cmake
src/templates/cpp/module/project/include/: module.h
src/templates/cpp/module/project/src/: module.cpp
src/templates/cpp/win32/project/: CMakeLists.txt  Win32.vcxproj  Win32.vcxproj.filters  Win32.vstemplate
src/templates/cpp/win32/project/.cmake/: sources.generated.cmake
tests/data/hosts/CppLibrary/: build.sh
tests/data/hosts/CppLibrary/CppLibraryHost/: CMakeLists.txt  main.cpp
tests/data/hosts/CppModule/: CMakeLists.txt
tests/data/settings/: hosts.json  templates.json
tests/dotnet/: .gitattributes  Directory.Build.props  Tests.sln
tests/dotnet/core/: Builder.cs  Commands.cs  Context.cs  Core.csproj  EmptyLogger.cs  Executor.cs  Helpers.cs  Logger.cs  TemplateExpander.cs  TemplateHosts.cs  TemplateInstantiator.cs  TemplateSettings.cs
tests/dotnet/mstest/integration/: ConsoleTest.cs  GUITest.cs  Integration.csproj  LibraryTest.cs  ModuleTest.cs  TestAssembly.cs  TestBase.cs  Win32Test.cs
tests/dotnet/mstest/unit/: TestClass.cs  Unit.csproj
tests/dotnet/runner/: ConsoleRunner.cs  GUIRunner.cs  LibraryRunner.cs  ModuleRunner.cs  Program.cs  Runner.csproj  RunnerBase.cs  Win32Runner.cs
tests/hosts/CppLibrary/: CMakeLists.txt  build.bat
tests/hosts/CppModule/: build.sh
tests/hosts/CppModule/CppModuleHost/: CMakeLists.txt  main.cpp
